--- a/src/app/components/top/top.component.html
+++ b/src/app/components/top/top.component.html
@@ -8,7 +8,10 @@
                 <!--begin::Header Nav-->
                 <ul class="menu-nav">
                     <li class="menu-item menu-item-open menu-item-here menu-item-submenu menu-item-rel menu-item-open menu-item-here menu-item-active" data-menu-toggle="click" aria-haspopup="true">
-
+                        <a (click)="logOut()" class="menu-link menu-toggle" style="background-color: #282f48;">
+                            <span class="menu-text" style="color: white !important">Cerrar sesión</span>
+                            <i class="menu-arrow"></i>
+                        </a>
                     </li>
 
                 </ul>
@@ -24,9 +27,9 @@
             <div class="topbar-item">
                 <div class="btn btn-icon w-auto btn-clean d-flex align-items-center btn-lg px-2" id="kt_quick_user_toggle">
                     <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hola,</span>
-                    <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">Camilo</span>
+                    <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{user.nombreUsuario}}</span>
                     <span class="symbol symbol-35 symbol-light-success">
-                <span class="symbol-label font-size-h5 font-weight-bold">CB</span>
+                <span class="symbol-label font-size-h5 font-weight-bold">{{user.nombreUsuario.substr(0,1)}}</span>
                     </span>
                 </div>
             </div>
