--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,11 @@
                         </div>
 
                         <div class="form-group text-center mt-10">
-                            <button type="button" (click)="login()" id="kt_login_signin_submit" class="btn btn-pill btn-primary font-weight-bold opacity-90 px-15 py-3">Ingresar</button>
+                            <button *ngIf="!btn_loguear" type="button" (click)="login()" id="kt_login_signin_submit" class="btn btn-pill btn-primary font-weight-bold opacity-90 px-15 py-3">Ingresar</button>
+                            <button *ngIf="btn_loguear" type="button" id="kt_login_signin_submit" class="btn btn-pill btn-primary font-weight-bold opacity-90 px-15 py-3">
+                                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                                <span role="status">Logueando...</span>
+                            </button>
                         </div>
                     </form>
 
