agregar archivos de configuracion para dockerizar

--- a/src/assets/css/themes/layout/brand/dark.css
+++ b/src/assets/css/themes/layout/brand/dark.css
@@ -1,6 +1,6 @@
 @media (min-width: 992px) {
     .brand {
-        background-color: #ffffff;
+        background-color: #0CF287;
         -webkit-box-shadow: none;
         box-shadow: none;
     }
