--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-root" style="height: 100vh !important;background: #060606 !important;">
+<div class="d-flex flex-column flex-root" style="height: 100vh !important;background: #0CF287 !important;">
     <!--begin::Login-->
     <div class="login login-signin-on login-2 d-flex flex-row-fluid" id="kt_login">
         <div class="d-flex flex-center bgi-size-cover bgi-no-repeat flex-row-fluid">
