--- a/src/app/components/top/top.component.html
+++ b/src/app/components/top/top.component.html
@@ -1,4 +1,4 @@
-<div id="kt_header" class="header header-fixed" style="background-color: #1e1e2d;">
+<div id="kt_header" class="header header-fixed" style="background-color: #13161D;">
     <!--begin::Container-->
     <div class="container-fluid d-flex align-items-stretch justify-content-between">
         <!--begin::Header Menu Wrapper-->
